syntax = "proto3";

option go_package = "./proto";

package chatbot.documents.v2;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service DocumentService {
  rpc List(DocumentFilter) returns (DocumentList);
  rpc Get(DocumentID) returns (Document);
  rpc Rename(RenameDocument) returns (google.protobuf.Empty);
  rpc Delete(DocumentID) returns (google.protobuf.Empty);
  rpc Index(IndexJob) returns (stream IndexProgress);
  rpc Search(SearchQuery) returns (SearchResults);
  rpc GetReferences(ReferenceIDs) returns (References);
}

message RenameDocument {
  string id = 1;
  oneof rename_to {
    string file_name = 2;
    string webpage_title = 3;
  }
}

message DocumentID {
  string id = 1;
}

message DocumentList {
  // Id to filename
  map<string, DocumentMetadata> items = 1;
}

message ReferenceIDs {
  repeated string items = 1;
}

message Chunk {
  string id = 1;
  string text = 2;
  uint32 index = 3;
}

message References {
  repeated Document items = 1;
}

message SearchQuery {
  string query = 1;
  string collection_id = 2;
  float threshold = 3;
  uint32 limit = 4;
}

message SearchResults {
  repeated Document items = 1;
  map<string, float> scores = 2;
}

message IndexProgress {
  string status = 1;
  float progress = 2;
}

message DocumentFilter {
  string query = 1;
  string collection_id = 2;
}

message DocumentMetadata {
  oneof data {
    File file = 1;
    Webpage web = 2;
  }
}

message File {
  string path = 1;
  string filename = 2;
}

message Webpage {
  string url = 1;
  string title = 2;
}

message Document {
  string id = 1;
  string collection_id = 2;
  google.protobuf.Timestamp created_at = 3;
  DocumentMetadata metadata = 4;
  repeated Chunk chunks = 5;
}

message IndexJob {
  string id = 1;
  string collection_id = 2;
  DocumentMetadata document = 3;
}
